# gestion-proyectos

./: .dockerignore  .gitignore  .pre-commit-config.yaml  License.md  Makefile  README.md  compose.yaml
backend/: .env-example  Dockerfile  compose-dev.yaml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 268b47aba4fb_init_schema.py  c6850d73cd90_create_all_schemas.py  d479caaa7c77_remove_complex_relationshit_from_user_.py
backend/src/app/core/: config.py  database.py  dependencies.py  logger.py  models_registry.py  security.py
backend/src/app/modules/client_portal/infrastructure/: models.py
backend/src/app/modules/ia_reporting/infrastructure/: models.py
backend/src/app/modules/identity/application/: use_cases.py
backend/src/app/modules/identity/domain/: services.py
backend/src/app/modules/identity/infrastructure/: enums.py  models.py
backend/src/app/modules/identity/presentation/: routes.py  schemas.py
backend/src/app/shared/: base_database.py  base_repository.py  exceptions.py
backend/src/core/: config.py  database.py
backend/src/modules/client_portal/infrastructure/: models.py
backend/src/modules/ia_reporting/infrastructure/: models.py
backend/src/modules/identity/infrastructure/: models.py
backend/src/modules/notifications/infrastructure/: models.py
backend/src/modules/project/infrastructure/: models.py
backend/src/modules/scheduling/infrastructure/: models.py
backend/src/modules/tasks/infrastructure/: models.py
backend/src/shared/: base_entity.py  exceptions.py
backend/tests/: conftest.py
backend/tests/fixtures/: config.py  database.py  identity.py
backend/tests/fixtures/config/: config_fixtures.py
backend/tests/fixtures/integration/: database.py  identity.py  security.py
backend/tests/fixtures/unit/: identity.py
backend/tests/integration/: conftest.py
backend/tests/integration/identity/: test_use_cases.py
backend/tests/integration/modules/identity/: test_routes.py  test_use_cases.py
backend/tests/unit/: conftest.py
backend/tests/unit/config/: test_config.py
backend/tests/unit/fastapi/: test_fastapi.py
backend/tests/unit/identity/: test_use_cases.py
backend/tests/unit/modules/identity/: test_use_cases.py
backend/tests/unit/repository/: test_repository.py
(+17 files in other folders)
