[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["SebastianVillegasVelasquez <villegasvelasquezs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.136.1"
uvicorn = "^0.47.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
