[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["SebastianVillegasVelasquez <villegasvelasquezs@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.136.1"
uvicorn = "^0.47.0"
sqlalchemy = "^2.0.49"
alembic = "^1.18.4"
pydantic = {extras = ["email", "settings"], version = "^2.13.4"}
asyncpg = "^0.31.0"
httpx = "^0.28.1"
pydantic-settings = "^2.14.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
ruff = "^0.15.13"
mypy = "^2.1.0"

[tool.pytests.ini_options]
testpaths = [
    "tests",
    "integration",
]
addopts = "-ra -q"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
